# fleximongo

./: Makefile  app.py  docker-compose.yml  pyproject.toml  test.py
fleximongo/: __init__.py  exc_handlers.py  exceptions.py  flexi.py  schemas.py  strategies.py
