[project]
name = "fleximongo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.6.2.post1",
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
    "motor>=3.6.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "uvicorn>=0.32.0",
]
